--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,13 @@ body{
     background-color: var(--clr-pry);
     color: var(--clr-sec);
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 /* root variable declarations */
 :root{
     /* colors  */
     --clr-pry: #ccc;
+    --clr-pry-light:#e9e9e9;
     --clr-sec:#333;
     --clr-accent-light: #0099cc;
     --clr-accent-dark: #003366;
@@ -65,12 +67,15 @@ p,span{font-size: var(--text-sm);}
     font-size:var(--text-xs);
 }
 
-/* boxes & containers */
+/* boxes, containers & sections*/
 .container{
     width: 85%;
     min-width: 300px;
     max-width: 1124px;
     margin: 0 auto;
+}
+section{
+    padding: 3rem 0;
 }
 
 .flex{
@@ -102,8 +107,23 @@ header{
 
 /* hero section  */
 .hero{
+    color: var(--clr-pry-light);
     width:100vw;
     height: 70vh;
     align-items: center;
     justify-content: center;
+    background-color: var(--clr-accent-light);
+}
+
+.services_cards{
+    grid-template-columns: repeat(3,1fr);
+    gap: 3px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/* cards */
+.card{
+    background-color: var(--clr-pry-light);
+    padding: 3rem;
 }
