--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,10 @@ input{
     border-bottom: 2px solid var(--clr-accent-light);
     height: 2rem;
 }
+#message{
+    height: 12rem;
+    margin-bottom: 1.5rem;;
+}
 
 /* buttons */
 .btn{
@@ -201,6 +205,7 @@ input{
     font-size: var(--text-xs);
     text-transform: uppercase;
     transition: ease 0.4s;
+    border-radius: 5px;
 }
 .btn_pry{
     background-color: var(--clr-accent-dark);
