--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,8 +115,10 @@ header{
 .nav_item:hover{
     border-bottom: var(--clr-accent-light);
     background-color: #003366;
-    color: var(--clr-pry-light)
-
+    color: var(--clr-pry-light);
+}
+.hamburger_icon{
+    display: none;
 }
 
 /* hero section  */
@@ -128,6 +130,7 @@ header{
     height: 70vh;
     align-items: center;
     justify-content: center;
+    text-align: center;
     background-color: var(--clr-accent-light);
 }
 
@@ -209,6 +212,7 @@ form{
     gap: 2rem;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 /* form input field */
@@ -315,6 +319,7 @@ footer{
         right:34px;
         font-size: 1.2rem;
     }
+
     /* toggle mobile menu  */
     #toggle:checked ~ ul{
         display: flex;
