--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,9 +212,6 @@ header{
 .case_card{
     display:flex;
     background-color: var(--clr-pry-light);
-
-    /* width:100%; */
-
 }
 .card_article{
     padding: 2rem;
@@ -359,5 +356,12 @@ footer{
     /* toggle mobile menu  */
     #toggle:checked ~ ul{
         display: flex;
+    }
+    .case_card{ /* change direction flow of case card  */
+        flex-direction: column;
+    }
+    .card_image{
+        width:100%;
+        height: 200px;
     }
 }
