--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,4 +364,8 @@ footer{
         width:100%;
         height: 200px;
     }
+    .form{
+       grid-template-columns: 1fr;
+       /* grid-template-rows: 1fr */
+    }
 }
