--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,19 +299,22 @@ input:hover,input:active {
     color: var(--clr-pry-light);
     box-shadow: 0px 14px 19px -6px rgba(0,0,0,0.24);
     scale: 103%;
-
 }
 .btn_sec{
     display:flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 2px solid var(--clr-accent-light);
     color: var(--clr-sec);
     gap: 0.5rem;
     text-transform: capitalize;
+    border-bottom: 1px solid var(--clr-accent-light);
+
 }
 .btn_sec:hover{
+    content:'yh';
     gap: 0.9rem;
+    border-bottom: 2px solid var(--clr-accent-light);
+    
 }
 .cta{
     border: 1px solid var(--clr-pry-light);
