--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ span {
     padding: 6rem 0;
 }
 
+/* general classifications classes */
 .flex {
     display: flex;
 }
@@ -125,6 +126,12 @@ span {
 
 .column {
     flex-direction: row;
+}
+.absolute{
+    position:absolute;
+}
+.relative{
+    position:relative;
 }
 
 /* header and nav  */
@@ -362,6 +369,14 @@ input:active {
     gap: 0.9rem;
     border-bottom: 2px solid var(--clr-accent-light);
 
+}
+.card_btn{
+    font-size: var(--text-xs);
+    background-color: rgba(0, 153, 204,0.8);
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
 }
 
 .cta {
