--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,11 +372,12 @@ input:active {
 }
 .card_btn{
     font-size: var(--text-xs);
-    background-color: rgba(0, 153, 204,0.8);
-    width:100%;
-    height:100%;
-    top:0;
-    left:0;
+
+}
+.card:hover .card_btn{
+    background-color: rgba(0, 153, 204,0.3);
+    gap: 0.9rem;
+    border-bottom: 2px solid var(--clr-accent-light);
 }
 
 .cta {
