create footer nav links and style the layout of footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,9 @@ body {
     --clr-pry-light: #e9e9e9;
     --clr-sec: #333;
     --clr-accent-light: #0099cc;
-    --clr-accent-md: #006f94;
+    --clr-accent-transparent: rgba(0, 153, 204,0.3);
     --clr-accent-dark: rgb(0, 51, 102);
+    --clr-gradient: linear-gradient(180deg, rgba(38, 100, 162, 0.7) 0%, rgba(0, 153, 204, 0.8) 100%);
     /* typography sizing  */
     --text-2xs: clamp(0.5rem, 0.4vw, 0.6rem);
     --text-xs: clamp(0.75rem, 1vw, 1rem);
@@ -218,7 +219,7 @@ header {
 /* hero bg overlay  */
 .bg_overlay {
     position: absolute;
-    background: linear-gradient(180deg, rgba(38, 100, 162, 0.7) 0%, rgba(0, 153, 204, 0.8) 100%);
+    background: var(--clr-gradient);
     top: 0;
     left: 0;
     width: 100vw;
@@ -375,6 +376,7 @@ input:active {
 .btn_sec:hover {
     gap: 0.9rem;
     border-bottom: 2px solid var(--clr-accent-light);
+    background-color: var(--clr-accent-transparent);
 
 }
 .card_btn{
@@ -382,7 +384,7 @@ input:active {
 
 }
 .card:hover .card_btn{
-    background-color: rgba(0, 153, 204,0.3);
+    background-color: var(--clr-accent-transparent);
     gap: 0.9rem;
     border-bottom: 2px solid var(--clr-accent-light);
 }
@@ -415,14 +417,29 @@ input:active {
 
 /* footer  */
 footer {
-    display: flex;
-    flex-direction: column;
+    padding: 2rem 0;
     gap: 3rem;
     align-items: center;
     text-align: center;
-    background-color: var(--clr-accent-dark);
+    background-color: var(--clr-accent-light);
     color: var(--clr-pry-light);
+}
 
+/* footer nav  */
+footer .brand{
+    color:white;
+}
+.footer_nav{
+    gap:3rem;
+}
+
+.footer_nav .nav_items{
+    font-size: var(--text-xs);
+    font-weight: 200;
+
+}
+.footer_nav_items_title{
+    text-transform:uppercase;
 }
 
 /* media queries */
@@ -465,6 +482,5 @@ footer {
 
     .form {
         grid-template-columns: 1fr;
-        /* grid-template-rows: 1fr */
     }
 }
