style why choose us card image size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,12 @@ header {
 }
 
 /* why choose us section  */
+.offer img{
+    width:150px;
+    height: 150px;
+    object-fit: cover;
+    object-position: center;
+}
 
 
 /* case studies section  */
