--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,15 +231,17 @@ header {
 .services_cards {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 3px;
-    border-radius: 10px;
-    overflow: hidden;
     margin: 3rem 0;
     padding: 2rem;
 }
 
 /* why choose us section  */
+.offer{
+    padding: 0 !important;
+    background-color: var(--clr-accent-transparent) !important;
+}
 .offer img{
-    width:150px;
+    width:100%;
     height: 150px;
     object-fit: cover;
     object-position: center;
@@ -255,6 +257,8 @@ header {
 .card {
     background-color: var(--clr-pry-light);
     padding: 3rem;
+    border-radius:5px;
+    overflow:hidden;
 }
 .card:hover{
     scale: 101%;
