--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,7 @@ input:active {
 /* get in touch banner */
 .cta_banner {
     background-color: var(--clr-accent-light);
+    background-image: url(/assets/images/wave.svg);
     display: flex;
     flex-direction: column;
     align-items: center;
