--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,8 @@ header {
 
 /* hero section  */
 .hero {
-    background-image: url(/assets/images/man-hand-holding-virtual-world-with-internet-connection-metaverse-global-business-marketing-banking-financial-pass-thru-application-technology-concept.jpg);
+    /* background-color: var(--clr-accent-light); */
+    background-image: url(/assets/images/wave.svg);
     background-size: cover;
     background-position: 0 20%;
     color: var(--clr-accent-dark);
@@ -205,7 +206,6 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: var(--clr-accent-light);
     position: relative;
 }
 
