--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,3 +513,16 @@ footer .brand h1 {
         grid-template-columns: 1fr;
     }
 }
+
+/* ====== ABOUT PAGE ====== */
+
+/* services  */
+.about_services{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+.article_image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
